--- a/index.html
+++ b/index.html
@@ -2,47 +2,62 @@
 <html lang="en">
 
 <head>
-  <title>JavaScript - read JSON from URL</title>
+  <title>A Game of Thrones Proxy Generator</title>
   <script src="js/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+
 </head>
 
 <body>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <h1 text-center>A Game of Thrones Proxy Generator</h1>
-      <p>
-        Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
-      </p>
-    </div>
-  </div>
-
-
+  <header>
+    <div class="container-fluid" id="header">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h1>A Game of Thrones Proxy Generator</h1>
+          <p>
+            Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
+          </p>
+        </div>
+      </div>
+  </header>
 
   <script>
-
-  $(document).ready(function() {
-    $("#Go").click(function getCard() {
-      $.getJSON('https://thronesdb.com/api/public/cards/', function(gotResults) {
-        var lines = $('textarea').val().split('\n');
-        for (var j = 0; j < lines.length; j++) {
-          var cardLabel = lines[j];
-          for (var i = 0; i < gotResults.length; i++) {
-            if (gotResults[i].label === cardLabel) {
-              $("#banner-section").html($("#banner-section").html() + "<img src=https://thronesdb.com" + gotResults[i].imagesrc + "></img>");
-            } else if (gotResults[i].name === cardLabel) {
-              $("#cardName").html(lines[j] + " ");
-              $("#labelResults").html($("#labelResults").html() + gotResults[i].label + "<br/>");
+    $(document).ready(function() {
+      $("#Go").click(function getCard() {
+        $.getJSON('https://thronesdb.com/api/public/cards/', function(gotResults) {
+          var lines = $('textarea').val().split('\n');
+          for (var j = 0; j < lines.length; j++) {
+            var x = lines[j].split(' ')[0];
+            var cardLabel = lines[j].split(' ').splice(1).join(' ');
+          //  var cardLabel = lines[j].substring(2);
+            //var x = lines[j].split(0);
+            console.log(cardLabel)
+            console.log(x);
+            for (var n = 0; n < x; n++) {
+              for (var i = 0; i < gotResults.length; i++) {
+                if (gotResults[i].label === cardLabel) {
+                  $("#img-section").html($("#img-section").html() + '<img src=https://thronesdb.com' + gotResults[i].imagesrc + ' class= "scan"></img>');
+                } else if (gotResults[i].name === cardLabel) {
+                  $("#cardName").html(lines[j] + " ");
+                  $("#labelResults").html($("#labelResults").html() + gotResults[i].label + "<br/>");
+                }
               }
             }
           }
+        });
       });
     });
-  });
-
   </script>
 
   <!--
+
+Pour split les lignes:
+strA = str.split(' ')[0];                    // "72";
+strB = str.split(' ').splice(1).join(' ');
+
+
 Ptite sauvegarde du script:
 
 <script>
@@ -81,22 +96,32 @@ Voir parseset sur l'api thronesdb...
   Reparcourir le tableau en relevant les pack_name et les labels,
   Retourner un affichage pour l'utilisateur, avec un choix entre les cartes des différents pack_name,
   puis inscrire le label choisi dans le script getCard.-->
+  <div class="container-fluid text-center" id="stuff-top">
+    <div class="row">
+      <div class="col-sm-12">
+        <form id="myForm" action="/action_page.php">
+        </form>
+        <textarea rows="4" cols="50" name="comment" form="myForm"></textarea>
+      </div>
+      <button id="Go">get card Img</button>
 
-  <form id="myForm" action="/action_page.php">
-  </form>
-  <textarea rows="4" cols="50" name="comment" form="myForm"></textarea>
 
-  <button id="Go">get card Img</button>
 
-  <div class="row" id="banner-section">
+      <p>
+        Voila les différents labels dispo pour la carte <span id="cardName"></span>:
+      </p>
+      <p id="labelResults"></p>
+    </div>
+  </div>
+
+  <div class="row center-block img-responsive" id="img-section">
 
   </div>
 
-  <p>
-    Voila les différents labels dispo pour la carte <span id="cardName"></span>:
-  </p>
-  <p id="labelResults"></p>
+  <div class="container-fluid text-center" id="stuff-bottom">
 
+  <input class="bigbutton printit" type="button" value="Print" onclick="window.print()" />
+</div>
 </body>
 
 </html>
