Added icons banner

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>A Game of Thrones Proxy Generator</title>
+  <meta charset="utf-8">
   <script src="js/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="css/master.css">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -16,7 +17,9 @@
       <div class="row">
         <div class="col-sm-12 text-center">
           <h1>A Game of Thrones Proxy Generator</h1>
-          <p>
+          <div class="iconsbanner">
+            <span class="icon icon-baratheon thronesfont" id="hexagon"></span><span class="icon icon-greyjoy thronesfont" id="hexagon"></span><span class="icon icon-lannister thronesfont" id="hexagon"></span><span class="icon icon-thenightswatch thronesfont" id="hexagon"></span><span class="icon icon-martell thronesfont" id="hexagon"></span><span class="icon icon-stark thronesfont" id="hexagon"></span><span class="icon icon-tyrell thronesfont" id="hexagon"></span><span class="icon icon-targaryen thronesfont" id="hexagon"></span><br></div>
+            <p>
             Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
           </p>
         </div>
