Last commit before sleep

--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 <body>
 
   <header>
-    <div class="container-fluid" id="header">
+    <div class="container-fluid  text-center bg" id="header">
       <div class="row">
-        <div class="col-sm-12 text-center">
+        <div class="col-sm-12">
           <h1>A Game of Thrones Proxy Generator</h1>
-          <div class="iconsbanner">
-            <span class="icon icon-baratheon thronesfont" id="hexagon"></span><span class="icon icon-greyjoy thronesfont" id="hexagon"></span><span class="icon icon-thenightswatch thronesfont" id="hexagon"></span><span class="icon icon-lannister thronesfont"
-              id="hexagon"></span><span class="icon icon-martell thronesfont" id="hexagon"></span><span class="icon icon-tyrell thronesfont" id="hexagon"></span><span class="icon icon-stark thronesfont" id="hexagon"></span><span class="icon icon-targaryen thronesfont"
-              id="hexagon"></span><br></div>
-          <p>
-            Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
-          </p>
         </div>
-      </div>
+            <span class="col-sm-offset-2 col-sm-1 icon icon-baratheon thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-greyjoy thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-thenightswatch thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-lannister thronesfont"
+              id="hexagon"></span><span class="col-sm-1  icon icon-martell thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-tyrell thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-stark thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-targaryen thronesfont"
+              id="hexagon"></span><br>
+              <div class="col-sm-12"><p>
+            Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
+          </p></div>
+        </div></div>
   </header>
 
   <div class="container-fluid text-center" id="stuff-top">
@@ -96,7 +95,7 @@
   <!--
 
 
-  
+
   Ecrire une fonction pour faire un tableau contenant <table><tr><td>Nom</td><td>Label <br>Label...<br></td></tr></table>
 
 
