--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="col-sm-12">
           <h1>A Game of Thrones Proxy Generator</h1>
         </div>
-            <span class="col-sm-offset-2 col-sm-1 icon icon-baratheon thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-greyjoy thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-thenightswatch thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-lannister thronesfont"
-              id="hexagon"></span><span class="col-sm-1  icon icon-martell thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-tyrell thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-stark thronesfont" id="hexagon"></span><span class="col-sm-1  icon icon-targaryen thronesfont"
-              id="hexagon"></span><br>
+            <span class="col-sm-offset-2 col-sm-1 icon icon-baratheon thronesfont"><p class="houseName">House Baratheon</p></span><span class="col-sm-1  icon icon-greyjoy thronesfont"><p class="houseName">House Greyjoy</p></span><span class="col-sm-1  icon icon-thenightswatch thronesfont"><p class="nightsWatchName">The Night's Watch</p></span><span class="col-sm-1  icon icon-lannister thronesfont"
+             ><p class="houseName">House Lannister</p></span><span class="col-sm-1  icon icon-martell thronesfont"><p class="houseName">House Martell</p></span><span class="col-sm-1  icon icon-tyrell thronesfont"><p class="houseName">House<br>Tyrell</p></span><span class="col-sm-1  icon icon-stark thronesfont"><p class="houseName">House<br>Stark</p></span><span class="col-sm-1  icon icon-targaryen thronesfont"
+             ><p class="houseName">House Targaryen</p></span><br>
               <div class="col-sm-12"><p>
             Saisissez votre liste de cartes à imprimer dans le formulaire suivant et cliquez sur go
           </p></div>
